--- a/LLama/LLamaSharp.csproj
+++ b/LLama/LLamaSharp.csproj
@@ -53,45 +53,45 @@
   </ItemGroup>
 
     <PropertyGroup>
-        <LlamaCppReleaseTag>b3289</LlamaCppReleaseTag>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
+        <GenerateDocumentationFile>True</GenerateDocumentationFile>
     </PropertyGroup>
 
     <ItemGroup>
-        <BinDownload Include="bin-win-noavx-x64" DestFolder="" />
-        <BinDownload Include="bin-win-avx-x64" DestFolder="avx" />
-        <BinDownload Include="bin-win-avx2-x64" DestFolder="avx2" />
-        <BinDownload Include="bin-win-avx512-x64" DestFolder="avx512" />
-        <BinDownload Include="bin-win-cuda-cu11.7.1-x64" DestFolder="cu11.7.1" />
-        <BinDownload Include="bin-win-cuda-cu12.2.0-x64" DestFolder="cu12.2.0" />
-        <BinDownload Include="bin-macos-arm64" DestFolder="osx-arm64" />
-        <BinDownload Include="bin-macos-x64" DestFolder="osx-x64" />
-        <BinDownload Include="bin-win-vulkan-x64" DestFolder="vulkan" />
+        <None Include="..\README.md" Pack="true" PackagePath="\" />
+    </ItemGroup>
+
+    <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+        <PackageReference Include="IsExternalInit" Version="1.0.3" PrivateAssets="all" />
+        <PackageReference Include="System.Memory" Version="4.5.5" PrivateAssets="all" />
+        <PackageReference Include="System.Linq.Async" Version="6.0.1" />
+        <PackageReference Include="System.Text.Json" Version="8.0.3" />
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="runtimes\deps\**" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
     </ItemGroup>
 
+
+    <PropertyGroup>
+        <BinaryReleaseId>1c5eba6f8e62</BinaryReleaseId>
+    </PropertyGroup>
+
     <Target Name="DownloadReleaseBinaries" BeforeTargets="DispatchToInnerBuilds">
-        <Message Importance="High" Text="Download 'llama-$(LlamaCppReleaseTag)-%(BinDownload.Identity).zip' to 'runtimes/deps/'" />
+        <Message Importance="High" Text="Download '$(BinaryReleaseId)/deps.zip' to 'runtimes'" />
         <DownloadFile
-            SourceUrl="https://github.com/ggerganov/llama.cpp/releases/download/$(LlamaCppReleaseTag)/llama-$(LlamaCppReleaseTag)-%(BinDownload.Identity).zip"
-            DestinationFolder="runtimes/deps"
-            DestinationFileName="llama-%(BinDownload.Identity).zip"
+            SourceUrl="https://github.com/martindevans/LLamaSharpBinaries/releases/download/$(BinaryReleaseId)/deps.zip"
+            DestinationFolder="runtimes"
+            DestinationFileName="deps.zip"
             SkipUnchangedFiles="true"
         />
-    </Target>
-    <Target Name="UnpackReleaseBinaries" BeforeTargets="DispatchToInnerBuilds" DependsOnTargets="DownloadReleaseBinaries">
-        <Message Importance="High" Text="Unzip 'llama-$(LlamaCppReleaseTag)-%(BinDownload.Identity).zip' to 'runtimes/deps/%(BinDownload.DestFolder)'" />
+
+        <Message Importance="High" Text="Unzip '$(BinaryReleaseId)/deps.zip'" />
         <Unzip
-            SourceFiles="runtimes/deps/llama-%(BinDownload.Identity).zip"
-            DestinationFolder="runtimes/deps/%(BinDownload.DestFolder)"
+            SourceFiles="runtimes/deps.zip"
+            DestinationFolder="runtimes/deps/"
             OverwriteReadOnlyFiles="false"
-            Include="*.dll"
+            Include="*.dll;*.so;*.dylib;*.metal;"
         />
     </Target>
-
-
-
-
 </Project>
