--- a/LLama/LLamaSharp.csproj
+++ b/LLama/LLamaSharp.csproj
@@ -52,7 +52,11 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
   </ItemGroup>
 
-  <Target Name="DownloadReleaseBinariesInner">
+  <PropertyGroup>
+    <BinaryReleaseId>1c5eba6f8e62</BinaryReleaseId>
+  </PropertyGroup>
+
+  <Target Name="DownloadReleaseBinaries">
     <PropertyGroup>
         <BinaryReleaseId>1c5eba6f8e62</BinaryReleaseId>
     </PropertyGroup>
@@ -63,17 +67,20 @@
 		DestinationFileName="deps.zip"
 		SkipUnchangedFiles="true"
 	/>
+  </Target>
 
+  <Target Name="UnzipReleaseBinaries" DependsOnTargets="DownloadReleaseBinaries">
 	<Message Importance="High" Text="Unzip '$(BinaryReleaseId)/deps.zip'" />
 	<Unzip
 		SourceFiles="runtimes/deps.zip"
 		DestinationFolder="runtimes/deps/"
-		OverwriteReadOnlyFiles="false"
+        OverwriteReadOnlyFiles="true"
 		Include="*.dll;*.so;*.dylib;*.metal;"
 	/>
   </Target>
-  <Target Name="DownloadReleaseBinaries" BeforeTargets="DispatchToInnerBuilds;BeforeBuild">
-    <MSBuild Projects="$(MSBuildProjectFile)" Targets="DownloadReleaseBinariesInner" Properties="TargetFramework=once" />
+    
+  <Target Name="PrepareReleaseBinaries" BeforeTargets="DispatchToInnerBuilds;BeforeBuild">
+    <MSBuild Projects="$(MSBuildProjectFile)" Targets="UnzipReleaseBinaries" Properties="TargetFramework=once" />
   </Target>
   
 </Project>
