Remove TargetFramework=once, as Unzip now depends on Download, and both have SkipUnchangedFiles, in theory it can never be ran twice.

--- a/LLama/LLamaSharp.csproj
+++ b/LLama/LLamaSharp.csproj
@@ -74,13 +74,14 @@
 	<Unzip
 		SourceFiles="runtimes/deps.zip"
 		DestinationFolder="runtimes/deps/"
+        SkipUnchangedFiles="true"
         OverwriteReadOnlyFiles="true"
 		Include="*.dll;*.so;*.dylib;*.metal;"
 	/>
   </Target>
     
   <Target Name="PrepareReleaseBinaries" BeforeTargets="DispatchToInnerBuilds;BeforeBuild">
-    <MSBuild Projects="$(MSBuildProjectFile)" Targets="UnzipReleaseBinaries" Properties="TargetFramework=once" />
+    <MSBuild Projects="$(MSBuildProjectFile)" Targets="UnzipReleaseBinaries" />
   </Target>
   
 </Project>
