--- a/LLama/LLamaSharp.csproj
+++ b/LLama/LLamaSharp.csproj
@@ -60,12 +60,14 @@
     <PropertyGroup>
         <BinaryReleaseId>1c5eba6f8e62</BinaryReleaseId>
     </PropertyGroup>
+      
 	<Message Importance="High" Text="Download '$(BinaryReleaseId)/deps.zip' to 'runtimes'" />
 	<DownloadFile
 		SourceUrl="https://github.com/SciSharp/LLamaSharpBinaries/releases/download/$(BinaryReleaseId)/deps.zip"
 		DestinationFolder="runtimes"
 		DestinationFileName="deps.zip"
 		SkipUnchangedFiles="true"
+        Retries="3"
 	/>
   </Target>
 
@@ -81,7 +83,7 @@
   </Target>
     
   <Target Name="PrepareReleaseBinaries" BeforeTargets="DispatchToInnerBuilds;BeforeBuild">
-    <MSBuild Projects="$(MSBuildProjectFile)" Targets="UnzipReleaseBinaries" />
+    <MSBuild Projects="$(MSBuildProjectFile)" Targets="UnzipReleaseBinaries" Properties="TargetFramework=once" />
   </Target>
   
 </Project>
