--- a/LLama/LLamaSharp.csproj
+++ b/LLama/LLamaSharp.csproj
@@ -56,6 +56,11 @@
     <BinaryReleaseId>1c5eba6f8e62</BinaryReleaseId>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <FirstTargetFramework Condition=" '$(TargetFrameworks)' == '' ">$(TargetFramework)</FirstTargetFramework>
+    <FirstTargetFramework Condition=" '$(FirstTargetFrameworks)' == '' ">$(TargetFrameworks.Split(';')[0])</FirstTargetFramework>
+  </PropertyGroup>
+
   <!-- When UnzipReleaseBinaries is called, this will run first, as UnzipReleaseBinaries depends on it (check DependsOnTargets of UnzipReleaseBinaries) -->
   <Target Name="DownloadReleaseBinaries">
 	<Message Importance="High" Text="Download '$(BinaryReleaseId)/deps.zip' to 'runtimes'" />
@@ -88,7 +93,7 @@
   </Target>
     
   <Target Name="CheckReleaseBinaries">
-    <!-- First, we read the previous binary release id from disk -->
+    <!-- First, we read the previous binary release id from disk -->    
     <ReadLinesFromFile File="runtimes/version.txt">
 		<Output TaskParameter="Lines" ItemName="PreviousBinaryReleaseId" />
     </ReadLinesFromFile>
@@ -106,8 +111,8 @@
   </Target>
 
   <!-- This always gets called before the build -->
-  <Target Name="PrepareReleaseBinaries" BeforeTargets="BeforeBuild">
-    <MSBuild Projects="$(MSBuildProjectFile)" Targets="CheckReleaseBinaries" />
+  <Target Name="PrepareReleaseBinaries" BeforeTargets="DispatchToInnerBuilds;BeforeBuild">
+    <MSBuild Projects="$(MSBuildProjectFile)" Targets="CheckReleaseBinaries" Properties="TargetFramework=$(FirstTargetFramework)" />
   </Target>
     
 </Project>
