--- a/.gitignore
+++ b/.gitignore
@@ -352,4 +352,4 @@ site/
 **/appsettings.Local.json
 /LLama/runtimes/deps
 /LLama/runtimes/deps.zip
-/LLama/runtimes/version.txt
+/LLama/runtimes/release_id.txt
