- Updated whisper packages  - Cleaned up SpeechChat.cs, some reformatting and lots of helper code removed in favour of using existing helpers (UserSettings, AnsiConsole)  - Refactored UserSettings to reduce duplication in file names

--- a/LLama.Examples/LLama.Examples.csproj
+++ b/LLama.Examples/LLama.Examples.csproj
@@ -21,10 +21,10 @@
     <PackageReference Include="NAudio" Version="2.2.1" />
     <PackageReference Include="Spectre.Console" Version="0.49.1" />
     <PackageReference Include="Spectre.Console.ImageSharp" Version="0.49.1" />
-    <PackageReference Include="Whisper.net" Version="1.5.0" />
-    <PackageReference Include="Whisper.net.Runtime" Version="1.5.0" />
+    <PackageReference Include="Whisper.net" Version="1.7.2" />
+    <PackageReference Include="Whisper.net.Runtime" Version="1.7.2" />
     <PackageReference Include="Whisper.net.Runtime.Clblast" Version="1.5.0" />
-    <PackageReference Include="Whisper.net.Runtime.CoreML" Version="1.5.0" />
+    <PackageReference Include="Whisper.net.Runtime.CoreML" Version="1.7.2" />
     <PackageReference Include="Whisper.net.Runtime.Cublas" Version="1.5.0" />
   </ItemGroup>
 
@@ -64,6 +64,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Assets\dan.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Assets\ggml-tiny.en.bin">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Assets\json.gbnf">
